Fix horizontal overflow

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -284,6 +284,9 @@ textarea.form-control{
   &.fade-left {
     opacity: 0;
     position: relative;
+		@include mobile {
+			left: 0;
+		}
     left: -30px;
 
     &.is-visible {
@@ -296,6 +299,9 @@ textarea.form-control{
     opacity: 0;
     position: relative;
     right: -30px;
+		@include mobile {
+			right: 0;
+		}
 
     &.is-visible {
       @include fadeIn();
